--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
   <title>Tax Calculator</title>
-  <meta name="viewport" content="width=device-width; initial-scale=1.0" />
+
 <script src="js/taxCalc.js"></script>
 </head>
 
@@ -21,11 +21,11 @@
 
 <form action="">
 <h3>Item Price:</h3>
- $ <input id="theCost" type="text"> </br>
+ $ <input id="theCost" type="text" value=""> </br>
  
   <h3>State you live in:</h3>
 
-   <select id="stateSelect" onchange="taxCalc()">
+   <select id="stateSelect" onchange="">
 <option value="--">--</option>
 <option value="Alabama">Alabama</option>
 <option value="Alaska">Alaska</option>
@@ -79,8 +79,16 @@
 <option value="Wyoming">Wyoming</option>
 </select>
 </form>
-<div class="outPut">
+
+ <input type="button" id="calculate" value="Calculate" onclick="taxCalc()">
+<div id="outPut">
   
+
+  <h2 id="taxOutPut"></h2>
+
+  
+<h1 id="totalOutPut"></h1>
+
 
 </div>
   </div>
