Adding tax amount

--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
 <option value="Wyoming">Wyoming</option>
 </select>
 </form>
-
+</br>
  <input type="button" id="calculate" value="Calculate" onclick="taxCalc()">
 <div id="outPut">
   
 
   <h2 id="taxOutPut"></h2>
 
-  
+    <h2 id="taxAmtOutPut"></h2>
 <h1 id="totalOutPut"></h1>
 
 
