Fix readme error

--- a/README.html
+++ b/README.html
@@ -1,2 +1,3 @@
-<p><img src="http://lancegd.com/stax/images/top-logo.png" alt="alt tag">
-A simple sales tax calculator written in JavaScript. </p>
+<p><img src="http://lancegd.com/stax/images/top-logo.png" alt="alt tag"></p>
+<h3 id="overview">Overview</h3>
+<p>A simple sales tax calculator written in JavaScript. </p>
